fix: Add z-index to event class in TableView styles

--- a/src/club/islands/calendar/TableView.module.scss
+++ b/src/club/islands/calendar/TableView.module.scss
@@ -89,6 +89,7 @@ $border-color: variables.$black;
     gap: 4px;
     background-color: variables.$primary-color;
     color: variables.$white;
+    z-index: 1;
 }
 
 .title,
